Homework_6/AuthApp/Manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw6auth-deployment
  labels:
    app: hw6auth-dp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hw6auth
  template:
    metadata:
      labels:
        app: hw6auth
    spec:
      containers:
        - name: hw6auth
          image: hw6auth:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
