Homework_6/AuthApp/Manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw6auth-ingress
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /api/v1/register
        pathType: Exact
        backend:
          service:
            name: hw6auth-service
            port:
              number: 80
      - path: /api/v1/login
        pathType: Exact
        backend:
          service:
            name: hw6auth-service
            port:
              number: 80
      - path: /api/v1/auth
        pathType: Exact
        backend:
          service:
            name: hw6auth-service
            port:
              number: 80
